# ai-dump

./: .gitignore  Home.py  README.md  logging.ini  pyproject.toml
bots/: code-ninja.yaml  code-only.yaml  cyoa-author.yaml  dr-tennison.yaml  foodie.yaml  literate-markdown.yaml  mr-lucht.yaml  terminal.yaml  vanilla.yaml  zork.yaml
pages/: 00_Chat.py  01_App_Builder.py  99_History.py
prompts/: 8bit-piano.md  8bit-player-v2.md  8bit-player.md
src/dataturd/dump/: bots.py  chat.py  connect4.py  data.py
