[tool.poetry]
name = "dataturd-dump"
version = "0.1.0"
description = ""
authors = ["Scott Pierce <spierce@spins.com>"]
readme = "README.md"
packages = [{include = "dataturd", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.23.1"
openai = "^0.27.7"
langchain = "^0.0.191"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
