[tool.poetry]
name = "dataturd-dump"
version = "0.1.0"
description = ""
authors = ["Scott Pierce <ddrscott@gmail.com>"]
readme = "README.md"
packages = [{include = "dataturd", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.23.1"
openai = "^0.27.7"
langchain = "0.0.188"
pyyaml = "^6.0"
pandas = "^2.0.2"
streamlit-aggrid = "^0.3.4.post3"
elasticsearch = "^8.8.0"
pytest = "^7.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
